--- a/analysis/median_income_regressions/mechanism_regression_analysis.Rmd
+++ b/analysis/median_income_regressions/mechanism_regression_analysis.Rmd
@@ -53,6 +53,9 @@ dfg_rs <-
       median_income_demo_scale,
       median_income_county_scale,
       PURPOSE_scale,
+      FINANCIAL_scale,
+      SOCIAL_scale,
+      COMMUNITY_scale,
       raw_income_scale,
       education_scale,
       total_pop_county_scale,
@@ -165,7 +168,7 @@ summary(lm1)
 #### Interactive model
 
 ```{r}
-lm1 <-
+lm2 <-
   lmer(
     PURPOSE_scale ~
       median_income_demo_scale * raw_income_scale +
@@ -194,8 +197,9 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm2)
 ```
+
 
 ##### Interaction plots
 
@@ -207,12 +211,19 @@ plot_model(lm1, type = "pred", terms = c("median_income_demo_scale", "sex"))
 ```
 
 
+#### Model comparison 
+
+```{r}
+anova(lm0, lm1, lm2)
+```
+
+
 ### Geographic median income - all years
 
 #### No median income model
 
 ```{r}
-lm1 <-
+lm0 <-
   lmer(
     PURPOSE_scale ~
       raw_income_scale +
@@ -233,7 +244,7 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm0)
 ```
 
 
@@ -300,6 +311,12 @@ lm1 <-
   )
 
 summary(lm1)
+```
+
+#### Model comparison 
+
+```{r}
+anova(lm0, lm1, lm2)
 ```
 
 
@@ -330,7 +347,7 @@ fin_terms %>%
 #### No median income model
 
 ```{r}
-lm1 <-
+lm0 <-
   lmer(
     FINANCIAL_scale ~
       raw_income_scale +
@@ -351,7 +368,7 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm0)
 ```
 
 
@@ -388,7 +405,7 @@ summary(lm1)
 #### Interactive model
 
 ```{r}
-lm1 <-
+lm2 <-
   lmer(
     FINANCIAL_scale ~
       median_income_demo_scale * raw_income_scale +
@@ -417,8 +434,9 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm2)
 ```
+
 
 ##### Interaction plots
 
@@ -430,12 +448,19 @@ plot_model(lm1, type = "pred", terms = c("median_income_demo_scale", "sex"))
 ```
 
 
+#### Model comparison 
+
+```{r}
+anova(lm0, lm1, lm2)
+```
+
+
 ### Geographic median income - all years
 
 #### No median income model
 
 ```{r}
-lm1 <-
+lm0 <-
   lmer(
     FINANCIAL_scale ~
       raw_income_scale +
@@ -456,7 +481,7 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm0)
 ```
 
 
@@ -523,6 +548,12 @@ lm1 <-
   )
 
 summary(lm1)
+```
+
+#### Model comparison 
+
+```{r}
+anova(lm0, lm1, lm2)
 ```
 
 
@@ -553,7 +584,7 @@ com_terms %>%
 #### No median income model
 
 ```{r}
-lm1 <-
+lm0 <-
   lmer(
     COMMUNITY_scale ~
       raw_income_scale +
@@ -574,7 +605,7 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm0)
 ```
 
 
@@ -611,7 +642,7 @@ summary(lm1)
 #### Interactive model
 
 ```{r}
-lm1 <-
+lm2 <-
   lmer(
     COMMUNITY_scale ~
       median_income_demo_scale * raw_income_scale +
@@ -640,8 +671,9 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm2)
 ```
+
 
 ##### Interaction plots
 
@@ -653,12 +685,19 @@ plot_model(lm1, type = "pred", terms = c("median_income_demo_scale", "sex"))
 ```
 
 
+#### Model comparison 
+
+```{r}
+anova(lm0, lm1, lm2)
+```
+
+
 ### Geographic median income - all years
 
 #### No median income model
 
 ```{r}
-lm1 <-
+lm0 <-
   lmer(
     COMMUNITY_scale ~
       raw_income_scale +
@@ -679,7 +718,7 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm0)
 ```
 
 
@@ -746,6 +785,12 @@ lm1 <-
   )
 
 summary(lm1)
+```
+
+#### Model comparison 
+
+```{r}
+anova(lm0, lm1, lm2)
 ```
 
 
@@ -776,7 +821,7 @@ soc_terms %>%
 #### No median income model
 
 ```{r}
-lm1 <-
+lm0 <-
   lmer(
     SOCIAL_scale ~
       raw_income_scale +
@@ -797,7 +842,7 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm0)
 ```
 
 
@@ -834,7 +879,7 @@ summary(lm1)
 #### Interactive model
 
 ```{r}
-lm1 <-
+lm2 <-
   lmer(
     SOCIAL_scale ~
       median_income_demo_scale * raw_income_scale +
@@ -863,8 +908,9 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm2)
 ```
+
 
 ##### Interaction plots
 
@@ -876,12 +922,19 @@ plot_model(lm1, type = "pred", terms = c("median_income_demo_scale", "sex"))
 ```
 
 
+#### Model comparison 
+
+```{r}
+anova(lm0, lm1, lm2)
+```
+
+
 ### Geographic median income - all years
 
 #### No median income model
 
 ```{r}
-lm1 <-
+lm0 <-
   lmer(
     SOCIAL_scale ~
       raw_income_scale +
@@ -902,7 +955,7 @@ lm1 <-
     data = dfg_rs 
   )
 
-summary(lm1)
+summary(lm0)
 ```
 
 
@@ -971,3 +1024,8 @@ lm1 <-
 summary(lm1)
 ```
 
+#### Model comparison 
+
+```{r}
+anova(lm0, lm1, lm2)
+```
