--- a/analysis/median_income_regressions/assorted_linear_regressions.Rmd
+++ b/analysis/median_income_regressions/assorted_linear_regressions.Rmd
@@ -62,8 +62,38 @@ contrasts(dfg_rs$married) <- contr.sum(6)
 
 ### Height
 
+#### Data selection
+
 ```{r}
-  lm1 <-
+dfg_current <-
+  dfg_rs %>%
+  filter_at(
+    vars(
+      height_scale,
+      median_income_demo_scale,
+      education_scale,
+      raw_income_scale,
+      median_home_value_county_scale,
+      median_monthly_housing_cost_county_scale,
+      physicians_scale,
+      total_pop_county_scale,
+      land_area_2010_scale,
+      race,
+      sex,
+      age_scale,
+      married,
+      employment_all,
+      year
+    ),
+    all_vars(!is.na(.))
+  )
+```
+
+
+#### Baseline Model
+
+```{r}
+  lm0 <-
     lmer(
       height_scale ~
         raw_income_scale +
@@ -81,15 +111,18 @@ contrasts(dfg_rs$married) <- contr.sum(6)
         (1 + raw_income_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm0)
   
-tidy(lm1)
+tidy(lm0)
 
-glance(lm1)
+glance(lm0)
 ```
+
+
+#### Main effect model
 
 ```{r}
   lm1 <-
@@ -112,7 +145,7 @@ glance(lm1)
         (1 + median_income_demo_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
 summary(lm1)
@@ -123,8 +156,10 @@ glance(lm1)
 ```
 
 
+#### Interactive model
+
 ```{r}
-  lm1 <-
+  lm2 <-
     lmer(
       height_scale ~
         median_income_demo_scale * raw_income_scale +
@@ -144,21 +179,58 @@ glance(lm1)
         (1 + median_income_demo_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm2)
   
-tidy(lm1)
+tidy(lm2)
 
-glance(lm1)
+glance(lm2)
+```
+
+
+#### Model comparison
+
+```{r}
+anova(lm0, lm1 , lm2)
 ```
 
 
 ### Self-reported health
 
+#### Data selection
+
 ```{r}
-  lm1 <-
+dfg_current <-
+  dfg_rs %>%
+  filter_at(
+    vars(
+      sr_health_scale,
+      median_income_demo_scale,
+      education_scale,
+      raw_income_scale,
+      median_home_value_county_scale,
+      median_monthly_housing_cost_county_scale,
+      physicians_scale,
+      total_pop_county_scale,
+      land_area_2010_scale,
+      race,
+      sex,
+      age_scale,
+      married,
+      employment_all,
+      year
+    ),
+    all_vars(!is.na(.))
+  )
+```
+
+
+#### Baseline Model
+
+```{r}
+  lm0 <-
     lmer(
       sr_health_scale ~
         raw_income_scale +
@@ -176,15 +248,18 @@ glance(lm1)
         (1 + raw_income_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm0)
   
-tidy(lm1)
+tidy(lm0)
 
-glance(lm1)
+glance(lm0)
 ```
+
+
+#### Main effect model
 
 ```{r}
   lm1 <-
@@ -207,7 +282,7 @@ glance(lm1)
         (1 + median_income_demo_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
 summary(lm1)
@@ -218,8 +293,10 @@ glance(lm1)
 ```
 
 
+#### Interactive model
+
 ```{r}
-  lm1 <-
+  lm2 <-
     lmer(
       sr_health_scale ~
         median_income_demo_scale * raw_income_scale +
@@ -239,21 +316,58 @@ glance(lm1)
         (1 + median_income_demo_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm2)
   
-tidy(lm1)
+tidy(lm2)
 
-glance(lm1)
+glance(lm2)
+```
+
+
+#### Model comparison
+
+```{r}
+anova(lm0, lm1 , lm2)
 ```
 
 
 ### Life satisfaction
 
+#### Data selection
+
 ```{r}
-  lm1 <-
+dfg_current <-
+  dfg_rs %>%
+  filter_at(
+    vars(
+      ladder_now_scale,
+      median_income_demo_scale,
+      education_scale,
+      raw_income_scale,
+      median_home_value_county_scale,
+      median_monthly_housing_cost_county_scale,
+      physicians_scale,
+      total_pop_county_scale,
+      land_area_2010_scale,
+      race,
+      sex,
+      age_scale,
+      married,
+      employment_all,
+      year
+    ),
+    all_vars(!is.na(.))
+  )
+```
+
+
+#### Baseline Model
+
+```{r}
+  lm0 <-
     lmer(
       ladder_now_scale ~
         raw_income_scale +
@@ -271,15 +385,18 @@ glance(lm1)
         (1 + raw_income_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm0)
   
-tidy(lm1)
+tidy(lm0)
 
-glance(lm1)
+glance(lm0)
 ```
+
+
+#### Main effect model
 
 ```{r}
   lm1 <-
@@ -302,7 +419,7 @@ glance(lm1)
         (1 + median_income_demo_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
 summary(lm1)
@@ -313,8 +430,10 @@ glance(lm1)
 ```
 
 
+#### Interactive model
+
 ```{r}
-  lm1 <-
+  lm2 <-
     lmer(
       ladder_now_scale ~
         median_income_demo_scale * raw_income_scale +
@@ -334,21 +453,58 @@ glance(lm1)
         (1 + median_income_demo_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm2)
   
-tidy(lm1)
+tidy(lm2)
 
-glance(lm1)
+glance(lm2)
+```
+
+
+#### Model comparison
+
+```{r}
+anova(lm0, lm1 , lm2)
 ```
 
 
 ### BMI
 
+#### Data selection
+
 ```{r}
-  lm1 <-
+dfg_current <-
+  dfg_rs %>%
+  filter_at(
+    vars(
+      bmi_scale,
+      median_income_demo_scale,
+      education_scale,
+      raw_income_scale,
+      median_home_value_county_scale,
+      median_monthly_housing_cost_county_scale,
+      physicians_scale,
+      total_pop_county_scale,
+      land_area_2010_scale,
+      race,
+      sex,
+      age_scale,
+      married,
+      employment_all,
+      year
+    ),
+    all_vars(!is.na(.))
+  )
+```
+
+
+#### Baseline Model
+
+```{r}
+  lm0 <-
     lmer(
       bmi_scale ~
         raw_income_scale +
@@ -366,15 +522,18 @@ glance(lm1)
         (1 + raw_income_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm0)
   
-tidy(lm1)
+tidy(lm0)
 
-glance(lm1)
+glance(lm0)
 ```
+
+
+#### Main effect model
 
 ```{r}
   lm1 <-
@@ -397,7 +556,7 @@ glance(lm1)
         (1 + median_income_demo_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
 summary(lm1)
@@ -408,8 +567,10 @@ glance(lm1)
 ```
 
 
+#### Interactive model
+
 ```{r}
-  lm1 <-
+  lm2 <-
     lmer(
       bmi_scale ~
         median_income_demo_scale * raw_income_scale +
@@ -429,14 +590,21 @@ glance(lm1)
         (1 + median_income_demo_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm2)
   
-tidy(lm1)
+tidy(lm2)
 
-glance(lm1)
+glance(lm2)
+```
+
+
+#### Model comparison
+
+```{r}
+anova(lm0, lm1 , lm2)
 ```
 
 
@@ -444,8 +612,38 @@ glance(lm1)
 
 ### Height
 
+#### Data selection
+
 ```{r}
-  lm1 <-
+dfg_current <-
+  dfg_rs %>%
+  filter_at(
+    vars(
+      height_scale,
+      median_income_county_scale,
+      education_scale,
+      raw_income_scale,
+      median_home_value_county_scale,
+      median_monthly_housing_cost_county_scale,
+      physicians_scale,
+      total_pop_county_scale,
+      land_area_2010_scale,
+      race,
+      sex,
+      age_scale,
+      married,
+      employment_all,
+      year
+    ),
+    all_vars(!is.na(.))
+  )
+```
+
+
+#### Baseline Model
+
+```{r}
+  lm0 <-
     lmer(
       height_scale ~
         raw_income_scale +
@@ -463,15 +661,18 @@ glance(lm1)
         (1 + raw_income_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm0)
   
-tidy(lm1)
+tidy(lm0)
 
-glance(lm1)
+glance(lm0)
 ```
+
+
+#### Main effect model
 
 ```{r}
   lm1 <-
@@ -494,7 +695,7 @@ glance(lm1)
         (1 + median_income_county_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
 summary(lm1)
@@ -505,8 +706,10 @@ glance(lm1)
 ```
 
 
+#### Interactive model
+
 ```{r}
-  lm1 <-
+  lm2 <-
     lmer(
       height_scale ~
         median_income_county_scale * raw_income_scale +
@@ -526,21 +729,58 @@ glance(lm1)
         (1 + median_income_county_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm2)
   
-tidy(lm1)
+tidy(lm2)
 
-glance(lm1)
+glance(lm2)
+```
+
+
+#### Model comparison
+
+```{r}
+anova(lm0, lm1 , lm2)
 ```
 
 
 ### Self-reported health
 
+#### Data selection
+
 ```{r}
-  lm1 <-
+dfg_current <-
+  dfg_rs %>%
+  filter_at(
+    vars(
+      sr_health_scale,
+      median_income_county_scale,
+      education_scale,
+      raw_income_scale,
+      median_home_value_county_scale,
+      median_monthly_housing_cost_county_scale,
+      physicians_scale,
+      total_pop_county_scale,
+      land_area_2010_scale,
+      race,
+      sex,
+      age_scale,
+      married,
+      employment_all,
+      year
+    ),
+    all_vars(!is.na(.))
+  )
+```
+
+
+#### Baseline Model
+
+```{r}
+  lm0 <-
     lmer(
       sr_health_scale ~
         raw_income_scale +
@@ -558,15 +798,18 @@ glance(lm1)
         (1 + raw_income_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm0)
   
-tidy(lm1)
+tidy(lm0)
 
-glance(lm1)
+glance(lm0)
 ```
+
+
+#### Main effect model
 
 ```{r}
   lm1 <-
@@ -589,7 +832,7 @@ glance(lm1)
         (1 + median_income_county_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
 summary(lm1)
@@ -600,8 +843,10 @@ glance(lm1)
 ```
 
 
+#### Interactive model
+
 ```{r}
-  lm1 <-
+  lm2 <-
     lmer(
       sr_health_scale ~
         median_income_county_scale * raw_income_scale +
@@ -621,21 +866,58 @@ glance(lm1)
         (1 + median_income_county_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm2)
   
-tidy(lm1)
+tidy(lm2)
 
-glance(lm1)
+glance(lm2)
+```
+
+
+#### Model comparison
+
+```{r}
+anova(lm0, lm1 , lm2)
 ```
 
 
 ### Life satisfaction
 
+#### Data selection
+
 ```{r}
-  lm1 <-
+dfg_current <-
+  dfg_rs %>%
+  filter_at(
+    vars(
+      ladder_now_scale,
+      median_income_county_scale,
+      education_scale,
+      raw_income_scale,
+      median_home_value_county_scale,
+      median_monthly_housing_cost_county_scale,
+      physicians_scale,
+      total_pop_county_scale,
+      land_area_2010_scale,
+      race,
+      sex,
+      age_scale,
+      married,
+      employment_all,
+      year
+    ),
+    all_vars(!is.na(.))
+  )
+```
+
+
+#### Baseline Model
+
+```{r}
+  lm0 <-
     lmer(
       ladder_now_scale ~
         raw_income_scale +
@@ -653,15 +935,18 @@ glance(lm1)
         (1 + raw_income_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm0)
   
-tidy(lm1)
+tidy(lm0)
 
-glance(lm1)
+glance(lm0)
 ```
+
+
+#### Main effect model
 
 ```{r}
   lm1 <-
@@ -684,7 +969,7 @@ glance(lm1)
         (1 + median_income_county_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
 summary(lm1)
@@ -695,8 +980,10 @@ glance(lm1)
 ```
 
 
+#### Interactive model
+
 ```{r}
-  lm1 <-
+  lm2 <-
     lmer(
       ladder_now_scale ~
         median_income_county_scale * raw_income_scale +
@@ -716,21 +1003,58 @@ glance(lm1)
         (1 + median_income_county_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm2)
   
-tidy(lm1)
+tidy(lm2)
 
-glance(lm1)
+glance(lm2)
+```
+
+
+#### Model comparison
+
+```{r}
+anova(lm0, lm1 , lm2)
 ```
 
 
 ### BMI
 
+#### Data selection
+
 ```{r}
-  lm1 <-
+dfg_current <-
+  dfg_rs %>%
+  filter_at(
+    vars(
+      bmi_scale,
+      median_income_county_scale,
+      education_scale,
+      raw_income_scale,
+      median_home_value_county_scale,
+      median_monthly_housing_cost_county_scale,
+      physicians_scale,
+      total_pop_county_scale,
+      land_area_2010_scale,
+      race,
+      sex,
+      age_scale,
+      married,
+      employment_all,
+      year
+    ),
+    all_vars(!is.na(.))
+  )
+```
+
+
+#### Baseline Model
+
+```{r}
+  lm0 <-
     lmer(
       bmi_scale ~
         raw_income_scale +
@@ -748,15 +1072,18 @@ glance(lm1)
         (1 + raw_income_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm0)
   
-tidy(lm1)
+tidy(lm0)
 
-glance(lm1)
+glance(lm0)
 ```
+
+
+#### Main effect model
 
 ```{r}
   lm1 <-
@@ -779,7 +1106,7 @@ glance(lm1)
         (1 + median_income_county_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
 summary(lm1)
@@ -790,8 +1117,10 @@ glance(lm1)
 ```
 
 
+#### Interactive model
+
 ```{r}
-  lm1 <-
+  lm2 <-
     lmer(
       bmi_scale ~
         median_income_county_scale * raw_income_scale +
@@ -811,12 +1140,19 @@ glance(lm1)
         (1 + median_income_county_scale|fips_code),
       REML = FALSE,
       control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_rs
+      data = dfg_current
     )
 
-summary(lm1)
+summary(lm2)
   
-tidy(lm1)
+tidy(lm2)
 
-glance(lm1)
+glance(lm2)
+```
+
+
+#### Model comparison
+
+```{r}
+anova(lm0, lm1 , lm2)
 ```
